playlist and add from device

--- a/scss/style.css
+++ b/scss/style.css
@@ -228,123 +228,4 @@
 .PlayerContainer .ControlWrapper .replay:hover .replay-txt {
   display: inline;
   opacity: 0.5;
-}
-
-/* playlist functionality */
-
-.playlistContainer {
-  margin-left: 8vw;
-  padding: 10px;
-  padding-bottom: 30px;
-  display: flex;
-  height: auto;
-  width: 30vw;
-  justify-content: center;
-  border-radius: 20px;
-  background-color: rgba(0, 0, 0, 0.4);
-  box-shadow: 0 5px 8px 0 rgb(0, 0, 0, 0.4);
-  color: white;
-}
-
-.playlistContainer .playlistWrapper ul{
-  list-style-type: none;
-  margin-top: 10px;
-}
-
-.playlistContainer .playlistWrapper {
-  width: 70%;
-  list-style-type: none;
-  margin-top: 10px;
-}
-
-.playlistContainer .playlistWrapper .playlist li{
-  border-bottom: #FBFBFF 1px solid;
-  padding: 10px;
-  cursor: pointer;
-}
-
-.playlistContainer .playlistWrapper .playlist li.active {
-  box-shadow: 0 5px 8px 0 rgb(0, 0, 0, 0.4);
-  background-color: #5a6d81;
-  color: #fff;
-}
-
-/* song add */
-.add_song {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  margin-top: 20px;
-  justify-content: center;
-  align-items: center;
-  background-color: #5a6d81;
-  box-shadow: 0 5px 8px 0 rgb(0, 0, 0, 0.4);
-  border-radius: 20px;
-  margin-left: 5vw;
-  height: 40vh;
-  width: 20vw;
-}
-
-.add_song input {
-  width:15vw;
-  background: #23272b;
-  box-shadow: 0 5px 8px 0 rgb(0, 0, 0, 0.4);
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  padding: 8px 12px;
-  font-family: 'Poppins', sans-serif;
-  font-size: 1rem;
-  cursor: pointer;
-  outline: none;
-  transition: border 0.2s;
-}
-
-.add_song input:focus {
-  border: 1.5px solid #fff;
-}
-
-.add_song button {
-  color: #23272b;
-  border: none;
-  border-radius: 5px;
-  padding: 8px 18px;
-  font-family: 'Poppins', sans-serif;
-  font-size: 1rem;
-  cursor: pointer;
-  transition: 0.2s;
-  box-shadow: 0 5px 8px 0 rgb(0, 0, 0, 0.4);
-}
-
-.add_song button:hover {
-  background: #3c4bef;
-  color: #fff;
-}
-
-@media screen and (max-width: 1060px) {
-  .PlayerContainer {
-    flex-direction: column;
-    height: auto;
-  }
-  .PlayerContainer .WrapperPlayer {
-    width: 70%;
-    height: auto;
-    padding: 20px;
-    margin-top: 20px;
-  }
-  .playlistContainer {
-    width: 70%;
-    margin-left: 0;
-    margin-top: 3vh;
-  }
-  .add_song {
-    width: 70%;
-    margin-left: 0;
-    margin-bottom: 20px;
-  }
-
-  .add_song input {
-  width:50vw;
-  }
-  
-}
+}/*# sourceMappingURL=style.css.map */
